# DelayDeck

./: .gitignore  LICENSE  README.en.md  README.md  go.work
.github/workflows/: build-windows-zip.yml
apps/obs-plugin/: CMakeLists.txt
apps/obs-plugin/data/locale/: en-US.ini  ja-JP.ini
apps/obs-plugin/src/: plugin-main.cpp  plugin-module.c  version.hpp  version.hpp.in
apps/obs-plugin/src/config/: credential-store-win.cpp  credential-store.hpp  dock-settings.cpp  dock-settings.hpp  relay-destination-url.cpp  relay-destination-url.hpp  relay-platform-presets.cpp  relay-platform-presets.hpp  relay-settings.cpp  relay-settings.hpp  setup-dialog.cpp  setup-dialog.hpp
apps/obs-plugin/src/dock/: about-dialog.cpp  about-dialog.hpp  delaydeck-dock.cpp  delaydeck-dock.hpp
apps/obs-plugin/src/locale/: tr.hpp
apps/obs-plugin/src/obs/: obs-install-path.cpp  obs-install-path.hpp  slate-scene-controller.cpp  slate-scene-controller.hpp  streaming-setup.cpp  streaming-setup.hpp
apps/obs-plugin/src/preflight/: preflight-checker.cpp  preflight-checker.hpp  preflight-dialog.cpp  preflight-dialog.hpp  preflight-result.hpp  streaming-guard.cpp  streaming-guard.hpp
apps/obs-plugin/src/relay/: relay-client.cpp  relay-client.hpp  relay-event-socket.cpp  relay-event-socket.hpp  relay-process.cpp  relay-process.hpp  relay-types.hpp
apps/obs-plugin/src/util/: github-release-checker.cpp  github-release-checker.hpp
apps/relay-engine/: go.mod  go.sum
apps/relay-engine/cmd/delaydeck-relay/: main.go
apps/relay-engine/internal/api/: events.go  handlers.go  handlers_test.go
apps/relay-engine/internal/buffer/: ring.go  ring_keyframe_test.go  ring_test.go
apps/relay-engine/internal/config/: config.go  config_test.go  mode.go  token.go
apps/relay-engine/internal/ingest/: coordinator.go  coordinator_test.go  mock_listener.go  mock_listener_test.go  pipeline.go  pipeline_test.go  rtmp_server.go  rtmp_server_test.go  test_pipeline.go
apps/relay-engine/internal/media/: encode_payload.go  frame.go  payload.go  payload_test.go
apps/relay-engine/internal/output/: destination.go  destination_test.go  rtmp_publisher.go
apps/relay-engine/internal/rtmpcompat/: on_metadata.go  on_metadata_test.go
apps/relay-engine/internal/scheduler/: controller.go  controller_test.go  fixed.go  fixed_test.go  timeline.go  timeline_test.go  writer.go
apps/relay-engine/internal/slate/: emitter.go  emitter_test.go
apps/relay-engine/internal/state/: errors.go  forwarding.go  machine.go  machine_test.go  operator_display.go  session_reset_test.go  state.go
apps/relay-engine/internal/version/: version.go
scripts/dev/: build-obs-plugin.ps1  install-obs-plugin.ps1  start-obs-dev.ps1  start-relay-mock.ps1  sync-go.ps1  sync-repo.ps1  sync-version.ps1
